--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
+    margin-top: 20px;
 }
 
 .chat-header {
@@ -70,9 +71,9 @@ body {
     border-radius: 5px; /* زوايا مستديرة */
     margin-bottom: 10px; /* تباعد أسفلي */
     white-space: nowrap; /* منع السطور الجديدة في الرسائل */
-    overflow: hidden; /* إخفاء النص الزائد في الحاوية */
-    max-width: 80%; /* حد أقصى لعرض الرسالة للتجنب من تمددها بشكل كبير */
-    transition: opacity 0.5s ease; /* تأثير طي النص */
+    /*overflow: hidden; /* إخفاء النص الزائد في الحاوية */
+    /*max-width: 80%; /* حد أقصى لعرض الرسالة للتجنب من تمددها بشكل كبير */
+    /*transition: opacity 0.5s ease; /* تأثير طي النص */
 }
 
 /* تطبيق تأثير طي النص */
@@ -98,3 +99,26 @@ body {
     margin-bottom: 10px; /* تباعد أسفلي */
 }
 
+
+
+#delete-button {
+    background-color: #ff3333; /* لون الخلفية */
+    color: #fff; /* لون النص */
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-left: 10px; /* تحديث المارجن ليظهر على اليمين */
+}
+
+#delete-button:hover {
+    background-color: #ff0000; /* تغيير لون الخلفية عند التحويم */
+}
+
+
+#add {
+    width: 100%;
+    height: 100px;
+    background-color: #ff0000;
+    margin-top: 50px;
+}
