--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 .ad-space {
-    width: 80%;
-    height: 50px;
+    height : 90px;
+    width : 728px;
     background-color: white;
     margin-left: 8%;
 }
