--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     margin: 0 auto; /* توسيع المركز */
 }
 
+
 .chat-header {
     width: 100%;
     align-items: center;
@@ -141,9 +142,7 @@ span {
 }
 
 @media (max-width: 768px) {
-    .chat-container {
-        width: 100%;
-    }
+
 
     .chat-log {
         height: 300px;
@@ -171,11 +170,11 @@ span {
         font-size: 1.2rem;
     }
 
+    .ad-space {
+        order: -1; /* يضع الإعلان في الجزء العلوي في الشاشات الصغيرة */
+    }
+
     .chat-container {
-        width: 100%;
-        height: 100vh;
-        flex-shrink: 0;
-        border-radius: 5px;
-        background: #D9D9D9;
+        width: 100%; /* يملء الشاشة عندما يكون العرض أقل من 768 بكسل */
     }
 }
